TDI-43679 : PubSub output
- changed java classes to services