@@ -15,12 +15,14 @@ package org.talend.components.pubsub.input.converter;
 import lombok.extern.slf4j.Slf4j;
 import org.talend.components.pubsub.dataset.PubSubDataSet;
 import org.talend.components.pubsub.service.I18nMessage;
+import org.talend.sdk.component.api.service.Service;
 import org.talend.sdk.component.api.service.record.RecordBuilderFactory;
 
 import java.util.Arrays;
 import java.util.Optional;
 
 @Slf4j
+@Service
 public class MessageConverterFactory {
 
     private static final Class<? extends MessageConverter>[] IMPLEMENTATIONS = new Class[] { CSVMessageConverter.class,
@@ -31,7 +33,7 @@ public class MessageConverterFactory {
 
         Optional<? extends MessageConverter> opt = Arrays.stream(IMPLEMENTATIONS).map(c -> {
             try {
-                return c.newInstance();
+                return c.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 log.error(e.getMessage(), e);
                 return null;
